[gd_scene load_steps=10 format=3 uid="uid://wael2dq1ktnn"]

[ext_resource type="Script" uid="uid://b3eo8alao27n6" path="res://Scenes/Towers/temp_tower.gd" id="1_u0wx6"]
[ext_resource type="Texture2D" uid="uid://b26gxc0qfdg1q" path="res://Assets/Tower/tesla-coil.png" id="2_gk5pf"]
[ext_resource type="Script" uid="uid://b6utwqgnhbq5l" path="res://Scripts/Components/Projectiles/projectile_emitter.gd" id="3_t2g34"]
[ext_resource type="PackedScene" uid="uid://dtxe34f4qw2x6" path="res://Scenes/Projectiles/Projectile.tscn" id="4_dbmra"]
[ext_resource type="Script" uid="uid://dml00cd28ie6g" path="res://Scripts/Components/Projectiles/projectile_type.gd" id="4_gk5pf"]
[ext_resource type="Resource" uid="uid://b1fja6mbt8opd" path="res://Scenes/Projectiles/lightningbolt.tres" id="5_gk5pf"]
[ext_resource type="PackedScene" uid="uid://n70pmkp7lwkr" path="res://Scenes/Projectiles/Lighningbolt.tscn" id="7_w37wc"]

[sub_resource type="CircleShape2D" id="CircleShape2D_w37wc"]

[sub_resource type="CircleShape2D" id="CircleShape2D_butbb"]
radius = 145.169

[node name="TempTower" type="CharacterBody2D"]
y_sort_enabled = true
collision_layer = 16
collision_mask = 28
script = ExtResource("1_u0wx6")

[node name="Sprite2D" type="Sprite2D" parent="."]
y_sort_enabled = true
position = Vector2(0, -16)
texture = ExtResource("2_gk5pf")

[node name="PhysicalCollision" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_w37wc")

[node name="AttackRange" type="Area2D" parent="."]
collision_layer = 128
collision_mask = 8

[node name="AttackCollision" type="CollisionShape2D" parent="AttackRange"]
shape = SubResource("CircleShape2D_butbb")

[node name="HealthBar" type="ProgressBar" parent="."]
offset_left = -20.0
offset_top = -75.0
offset_right = 20.0
offset_bottom = -48.0
metadata/_edit_use_anchors_ = true

[node name="RangeIndicator" type="Node2D" parent="."]

[node name="RangeCircle" type="Sprite2D" parent="RangeIndicator"]

[node name="projectile_emitter" type="Node2D" parent="."]
position = Vector2(1, -34)
script = ExtResource("3_t2g34")
projectile_types = Array[ExtResource("4_gk5pf")]([ExtResource("5_gk5pf")])
universal_projectile_scene = ExtResource("4_dbmra")
lightning_projectile_scene = ExtResource("7_w37wc")
